# autodoc_pydantic

./: .all-contributorsrc  .gitignore  .readthedocs.yaml  .release-please-manifest.json  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  changelog.rst  pyproject.toml  release-please-config.json  renovate.json  ruff.toml  tox.ini
.github/: dependabot.yml
.github/actions/: setup-test-env.yml
.github/actions/invoke-tox/: action.yml
.github/actions/setup-test-env/: action.yml
.github/workflows/: pr-agent.yml  pr_agent.yml  publish.yml  release-please.yml  tests-push-pr.yml  tests-scheduled.yml  tests.yml
docs/source/: api.rst  changelog.rst  conf.py  configuration.rst  developer_guide.rst  examples.rst  explanation.rst  faq.rst  index.rst  installation.rst  usage.rst  user_guide.rst
docs/source/_static/: custom.css
docs/source/developer_guide/: changelog.rst  environment.rst  explanation.rst  how_to.rst
docs/source/developers/: design.rst  guides.rst  setup.rst
docs/source/developers/mermaid/: autodocumenter.mmd  model_inspector.mmd  pydantic_composite.mmd
docs/source/extensions/: __init__.py  directives.py  helper.py  templates.py
docs/source/package/: cfg.py
docs/source/reference/: api.rst  changelog.rst
docs/source/user_guide/: faq.rst  installation.rst
docs/source/users/: configuration.rst  examples.rst  faq.rst  installation.rst  usage.rst
sphinxcontrib/autodoc_pydantic/: __init__.py  application.py  autocodeblock.py  autodoc.py  composites.py  directives.py  events.py  inspection.py  util.py  utility.py
sphinxcontrib/autodoc_pydantic/css/: autodoc_pydantic.css
sphinxcontrib/autodoc_pydantic/directives/: autodocumenters.py  composites.py  directives.py  templates.py  utility.py
sphinxcontrib/autodoc_pydantic/directives/options/: composites.py  definition.py  enums.py  validators.py
tests/: compatability.py  compatibility.py  conftest.py  show_versions.py  test_autodoc.py  test_autodoc_examples.py  test_autosummary.py  test_configuration_config.py  test_configuration_fields.py  test_configuration_model.py  test_configuration_settings.py  test_configuration_validator.py  test_directives.py  test_edgecases.py  test_events.py  test_inspection.py  test_inspection_future_annotations.py  test_sphinx_build.py  test_supported_types.py
tests/roots/test-base/: conf.py
tests/roots/test-edgecase-any-reference/: edgecase_any_referencing.rst  edgecase_any_target.rst  index.rst
tests/roots/test-edgecase-typed-field-reference/: conf.py  index.rst
tests/roots/test-events-add-css-fallback/: add_css_fallback.py  add_css_fallback.rst  conf.py  index.rst
tests/roots/test-ext-autodoc_pydantic/: conf.py
tests/roots/test-json-error-strategy/: conf.py  example.py  index.rst
tests/roots/test-json-error-strategy-coerce/: example_coerce.py  index.rst
