[tool.poetry]
name = "autodoc_pydantic"
version = "2.1.0"
description = "Seamlessly integrate pydantic models in your Sphinx documentation."
authors = ["mansenfranzen <franz.woellert@gmail.com>"]
packages = [{ include = "sphinxcontrib" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mansenfranzen/autodoc_pydantic"
repository = "https://github.com/mansenfranzen/autodoc_pydantic"
documentation = "https://github.com/mansenfranzen/autodoc_pydantic"
keywords = ["sphinx", "pydantic", "autodoc", "documentation", "extension"]
classifiers = [
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation"
]
include = ["sphinxcontrib/autodoc_pydantic/css/autodoc_pydantic.css"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
Sphinx = ">=4.0"
pydantic = ">=2.0,<3.0.0"
pydantic-settings = ">=2.0,<3.0.0"
importlib-metadata = { version = ">1", markers = "python_version <= '3.8'" }

# poetry dependency groups are not used on purpose because they are not natively
# supported with tox. Hence, test/doc dependencies are managed via extras.
# See https://github.com/orgs/python-poetry/discussions/4307

# extras docs
sphinx-rtd-theme = { version = "^2.0.0", optional = true }
sphinx-tabs = { version = "^3", optional = true }
sphinx-copybutton = { version = "^0.5.0", optional = true }
sphinxcontrib-mermaid = { version = "^0.9.0", optional = true }

# extras tests
pytest = {version = "^8.0.0", optional = true }
coverage = { version ="^7", optional = true }

# extras linting/formatting
ruff = { version = "^0.3", optional = true }

# extras erdantic
erdantic = { version ="^0.7.0", optional = true }

[tool.poetry.extras]
docs = ["sphinx-rtd-theme",
        "sphinx-tabs",
        "sphinx-copybutton",
        "sphinxcontrib-mermaid"]

test = ["pytest",
        "coverage"]

linting = ["ruff"]

erdantic = ["erdantic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py38"
unsafe-fixes = false

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "COM812", "ISC001", "Q000", "Q003"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
