[tool.poetry]
name = "autodoc_pydantic"
version = "2.2.0"
description = "Seamlessly integrate pydantic models in your Sphinx documentation."
authors = ["mansenfranzen <franz.woellert@gmail.com>"]
packages = [{ include = "sphinxcontrib" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mansenfranzen/autodoc_pydantic"
repository = "https://github.com/mansenfranzen/autodoc_pydantic"
documentation = "https://github.com/mansenfranzen/autodoc_pydantic"
keywords = ["sphinx", "pydantic", "autodoc", "documentation", "extension"]
classifiers = [
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation"
]
include = ["sphinxcontrib/autodoc_pydantic/css/autodoc_pydantic.css"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
Sphinx = ">=4.0"
pydantic = ">=2.0,<3.0.0"
pydantic-settings = ">=2.0,<3.0.0"
importlib-metadata = { version = ">1", markers = "python_version <= '3.8'" }

# poetry dependency groups are not used on purpose because they are not natively
# supported with tox. Hence, test/doc dependencies are managed via extras.
# See https://github.com/orgs/python-poetry/discussions/4307

# extras docs
sphinx-rtd-theme = { version = "^2.0.0", optional = true }
sphinx-tabs = { version = "^3", optional = true }
sphinx-copybutton = { version = "^0.5.0", optional = true }
sphinxcontrib-mermaid = { version = "^0.9.0", optional = true }
myst-parser = {version = "^3.0.0", optional = true }

# extras tests
pytest = { version = "^8.0.0", optional = true }
pytest-sugar = { version = "^1.0.0", optional = true }
coverage = { version ="^7", optional = true }
defusedxml = { version = ">=0.7.1", optional = true }

# extras type checking
mypy = { version  = "^1.9", optional = true }
types-docutils = { version = "^0.20", optional = true }
typing-extensions = { version = "^4.11", markers = "python_version <= '3.9'", optional = true }

# extras linting/formatting
ruff = { version = "^0.5.0", optional = true }

# extras security
pip-audit = { version = "^2.7.2", optional = true }

# extras erdantic
erdantic = { version ="<2.0", optional = true }

[tool.poetry.extras]
docs = ["sphinx-rtd-theme",
        "sphinx-tabs",
        "sphinx-copybutton",
        "sphinxcontrib-mermaid",
        "myst-parser"]

test = ["pytest",
        "pytest-sugar",
        "coverage",
        "defusedxml"]

linting = ["ruff"]

type_checking = ["mypy",
                 "types-docutils",
                 "typing-extensions"]

security = ["pip-audit"]

erdantic = ["erdantic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
